# asimov

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
asimov-core/: Cargo.toml
asimov-core/examples/: simple.rs  simple_chain.rs  simple_fewshot.rs  streaming.rs  structured.rs  structured_streaming.rs
asimov-core/src/: error.rs  lib.rs
asimov-core/src/db/: hora.rs  mod.rs  namespace.rs  qdrant.rs  space.rs
asimov-core/src/io/: input.rs  output.rs
asimov-core/src/models/: mod.rs  openai.rs
asimov-core/src/models/capabilities/: embed.rs  generate.rs  mod.rs
asimov-core/src/tokenizers/: mod.rs
asimov-core/src/tokenizers/openai/: mod.rs  openai_tiktoken.rs
asimov-derive/: Cargo.toml
asimov-derive/src/: lib.rs
