[package]
name = "asimov_derive"
version = "0.1.0"
edition = "2021"
description = "Macros for the Asimov library."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0"
serde_json = "1.0"
proc-macro-crate = "3.0.0"
proc-macro2 = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
darling = "0.20.3"
